# serina-email

./: .electronignore  .gitignore  CLAUDE.md  MASTER_TASK_LIST.md  MVP_TASKS.md  ONBOARDING.md  PENDING-TASKS.md  PROJECT-TODO.md  README.md  TESTING.md  cascade-effort.md  index.html  main.js  package-lock.json  package.json  package.json.electron-backup  playwright.config.js  preload.js  project-documentaiton.md  serina-project-documentation.md  tailwind.config.js  test-runner.sh
.claude/: settings.local.json
.github/workflows/: test.yml
backend/: __init__.py  auth_service.py  calendar_service.py  config_service.py  database_service.py  email_service.py  llm_service.py  main.py  pytest.ini  reminder_service.py  requirements-test.txt  requirements.txt  scheduler_service.py  serina.db  test_services.py
backend/services/: ipc_server.py  llm_service.py  security.py  storage.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_config_service.py  (+3 more)
build_scripts/: build_python.sh
config/: default_config.json  settings_schema.json
renderer/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
renderer/src/: App.jsx  index.css  main.jsx
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx  NotificationSystem.tsx
src/pages/: EmailView copy.tsx  EmailView.tsx  ReminderPopup.tsx  Settings.tsx
src/utils/: sanitization.ts
tests/e2e/: app-flow.spec.js  reminder-workflow.spec.js
(+15 files in other folders)
